--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -156,3 +156,15 @@ textarea {
   height: 150px;
 
 }
+
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 640px) {
+
+}
