--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -157,14 +157,136 @@ textarea {
 
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+  .box {
+    height: 8%;
+  }
+  #nameBox {
+    height: 8%;
+    font-size: 16px;
+    width: 20%;
+    margin-left: 2%;
+  }
 
+  .navItems {
+  padding: 2%;
+  font-size: 16px;
+  height: 20px;
+  
+  }
+  .container {
+    padding: 2%;
+    margin-top: 5%;
+    width: 1000px;
+    
+  }
+  footer {
+    position: sticky;
+    height: 5%;
+    font-size: 12px;
 }
-
+}
 @media screen and (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+  .box {
+    height: 8%;
+  }
+  #nameBox {
+    height: 8%;
+    font-size: 16px;
+    width: 20%;
+    margin-left: 2%;
+  }
 
+  .navItems {
+  padding: 2%;
+  font-size: 16px;
+  height: 20px;
+  
+  }
+  .container {
+    padding: 2%;
+    margin-top: 10%;
+    width: 720px;
+    
+  }
+  footer {
+    position: sticky;
+    height: 5%;
+    font-size: 12px;
+}
 }
 
 @media screen and (max-width: 640px) {
+  body {
+    font-size: 16px;
+  }
+  .box {
+    height: 8%;
+  }
+  #nameBox {
+    height: 8%;
+    font-size: 12px;
+    width: 25%;
+  }
 
+  .navItems {
+  padding: 2%;
+  font-size: 14px;
+  height: 20px;
+  
+  }
+  .container {
+    padding: 2%;
+    margin-top: 10%;
+    width: 600px;
+    
+  }
+  footer {
+    position: sticky;
+    height: 5%;
+    font-size: 12px;
+}
+}
+@media screen and (max-width: 420px) {
+  body {
+    font-size: 12px;
+  }
+  .box {
+    height: 8%;
+  }
+  #nameBox {
+    height: 8%;
+    width: 25%;
+    font-size: 10px;
+  }
+
+  #aboutMe{
+    height: 140px;
+    width: 140px;
+    padding-right: 20px;
+    padding-bottom: 15px;
+  }
+  .navItems {
+  font-size: 10px;
+  color: #dddddd;
+ 
+  }
+  .container {
+    padding: 2%;
+    margin-top: 15%;
+    width: 380px;
+    
+  }
+
+  footer {
+    position: sticky;
+    height: 5%;
+    font-size: 10px;
+  }
 }
